Copy surefire plugin config