@@ -1666,6 +1666,30 @@
 
          <build>
             <plugins>
+	      <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>
+                     <argLine combine.self="override">-Xmx2048m -XX:MaxPermSize=1024m ${jacocoAgent}</argLine>
+                     <parallel combine.self="override">tests</parallel>
+                     <threadCount combine.self="override">${infinispan.test.parallel.threads}</threadCount>
+                     <groups combine.self="override">${defaultTestGroup}</groups>
+                     <systemPropertyVariables combine.self="override">
+                           <infinispan.test.jgroups.protocol>${infinispan.test.jgroups.protocol}</infinispan.test.jgroups.protocol>
+                           <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
+                           <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
+                           <infinispan.unsafe.allow_jdk8_chm>true</infinispan.unsafe.allow_jdk8_chm>
+                     </systemPropertyVariables>
+                     <trimStackTrace combine.self="override">false</trimStackTrace>
+                     <properties combine.self="override">
+                        <property>
+                           <name>listener</name>
+                           <value>${testNGListener}</value>
+                        </property>
+                     </properties>
+                  </configuration>
+               </plugin>
+
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-antrun-plugin</artifactId>
